--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -96,8 +96,8 @@ body::-webkit-scrollbar-thumb,
 #loginbox {
   background-color: #cfcfc4;
   height: 100vh;
-  display: grid;
-  grid-template-areas: "login" "text";
+  /* display: grid;
+  grid-template-areas: "login" "text"; */
 }
 
 .loginInfo {
@@ -116,146 +116,37 @@ body::-webkit-scrollbar-thumb,
 }
 
 /* Login / Sign Up Form CSS */
-.login-wrap {
+.sign-in {
   width: 100%;
-  margin: auto;
+  margin-left: auto;
   position: relative;
-  margin-top: 2vw;
+  margin-top: 0em;
+  text-align: center;
 }
-.login-html {
-  width: 100%;
-  height: 100%;
+.sign-in input[type="text"],
+.sign-in input[type="password"] {
+  font-size: 1.3vw;
+  padding: 1vw;
+  width: 80%;
+  margin-bottom: 1vw;
 }
-.login-html .sign-in-htm,
-.login-html .sign-up-htm {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  position: absolute;
-  transform: rotateY(180deg);
-  backface-visibility: hidden;
-  transition: all 0s ease;
+#check-label {
+  font-size: 1.3vw;
 }
-.login-html .sign-in,
-.login-html .sign-up,
-.login-form .group .check {
-  display: none;
-}
-.login-html .tab {
-  font-size: 1.5vw;
-  margin-right: 15px;
-  padding-bottom: 5px;
-  margin: 0 15px 20px 0;
-  display: inline-block;
-  border-bottom: 2px solid transparent;
-}
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab {
-  border-color: black;
-  font-weight: bold;
-}
-.login-html .sign-in:not(:checked) + .tab:hover,
-.login-html .sign-up:not(:checked) + .tab:hover {
-  cursor: pointer;
-}
-
-.login-form {
-  min-height: 345px;
-  position: relative;
-  perspective: 1000px;
-  transform-style: preserve-3d;
-}
-.login-form .group {
-  margin-bottom: 15px;
-}
-.login-form .group .label,
-.login-form .group .input,
-.login-form .group .button {
-  width: 100%;
-  color: black;
-  display: block;
-}
-.login-form .group .input,
-.login-form .group .button {
-  border: none;
-  padding: 1vw 1.3vw;
-  background-color: white;
-}
-.login-form .group input[data-type="password"] {
-  -webkit-text-security: circle;
-}
-.login-form .group .button {
-  background-color: #bb9cd9;
+.button {
+  width: 80%;
+  margin-top: 1vw;
   font-size: 1.3vw;
   transition: background-color 0.5s linear;
 }
-.login-form .group .button:hover {
+.button:hover {
   cursor: pointer;
   background-color: #a974dd;
 }
-.login-form .group label {
-  float: left;
-  margin-bottom: 12.5px;
-}
-.login-form .group label .icon {
-  width: 15px;
-  height: 15px;
-  border-radius: 2px;
-  position: relative;
-  display: inline-block;
-  background: white;
-  margin-right: 5px;
-  bottom: -2px;
-}
-.login-form .group label:hover {
-  cursor: pointer;
-}
-.login-form .group label .icon:before,
-.login-form .group label .icon:after {
-  content: "";
-  width: 10px;
-  height: 2px;
-  background: black;
-  position: absolute;
-  transition: all 0.1s ease-in-out 0s;
-}
-.login-form .group label .icon:before {
-  left: 2.5px;
-  width: 5px;
-  bottom: 4.5px;
-  transform: scale(0) rotate(0);
-}
-.login-form .group label .icon:after {
-  top: 6.5px;
-  right: 0.5px;
-  transform: scale(0) rotate(0);
-}
-.login-form .group .check:checked + label .icon {
-  background: white;
-}
-.login-form .group .check:checked + label .icon:before {
-  transform: scale(1) rotate(45deg);
-}
-.login-form .group .check:checked + label .icon:after {
-  transform: scale(1) rotate(-45deg);
-}
-.login-html
-  .sign-in:checked
-  + .tab
-  + .sign-up
-  + .tab
-  + .login-form
-  .sign-in-htm {
-  transform: rotate(0);
-}
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm {
-  transform: rotate(0);
-}
 
 .login-text {
+  margin-top: 2vw;
   position: relative;
-  top: -40%;
   margin-left: 2vw;
   margin-right: 2vw;
   text-align: center;
@@ -263,6 +154,7 @@ body::-webkit-scrollbar-thumb,
 }
 
 .login-text button {
+  margin-top: 2vw;
   width: 100%;
 }
 .login-text button:hover {
@@ -877,6 +769,7 @@ div.miniFretLegend {
 
 textarea {
   resize: none;
+  font-family: monospace;
 }
 
 /* ----------------------------- Tab Option CSS ----------------------------- */
