--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -897,3 +897,63 @@ textarea {
 #clearOptions {
   margin-top: 10px;
 }
+
+/* MODAL CSS */
+.modal {
+  opacity: 0;
+  position: fixed;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, 0.6);
+  transition: all 0.25s ease-in-out;
+}
+/* generic modal content style */
+.modal-content {
+  background-color: #bb9cd9;
+  padding: 2vw;
+  border: 2px solid black;
+  /* animation: fade-in-2 0.5s; */
+}
+.back-modal-content {
+  margin: 39vh auto;
+  width: 30%;
+}
+.modal-content h4 {
+  margin-top: 0;
+  text-align: center;
+  font-size: 1.5vw;
+}
+.modal-content .back-buttons {
+  text-align: center;
+}
+.modal-content button {
+  background-color: #a974dd;
+  padding: 1vw;
+  font-size: 1.25vw;
+  border: none;
+  width: 8vw;
+  margin-left: 25px;
+  margin-right: 25px;
+  transition: background-color 0.5s linear;
+  font-weight: bold;
+}
+.modal-content button:hover {
+  cursor: pointer;
+  background-color: #9c5adf;
+}
+/*
+@keyframes fade-in-2 {
+  from {
+    opacity: 0;
+    transform: scale(0.75);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+} */
