--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -20,6 +20,9 @@ body {
   box-sizing: border-box;
   font-family: Raleway;
 }
+*:focus {
+  outline: none;
+}
 
 body::-webkit-scrollbar,
 .tab-content::-webkit-scrollbar {
@@ -923,10 +926,25 @@ textarea {
   margin: 39vh auto;
   width: 30%;
 }
+.help-modal-content {
+  margin: 13vh auto;
+  width: 60%;
+}
 .modal-content h4 {
   margin-top: 0;
   text-align: center;
   font-size: 1.5vw;
+}
+.help-modal-content h4 {
+  text-align: left;
+  margin-bottom: 1vw;
+}
+.help-modal-content p,
+.help-modal-content li {
+  font-size: 1.2vw;
+}
+.help-modal-content ul {
+  list-style-type: none;
 }
 .modal-content .back-buttons {
   text-align: center;
@@ -946,14 +964,22 @@ textarea {
   cursor: pointer;
   background-color: #9c5adf;
 }
-/*
-@keyframes fade-in-2 {
-  from {
-    opacity: 0;
-    transform: scale(0.75);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-} */
+.close {
+  float: right;
+  position: relative;
+  top: -18px;
+  right: -13px;
+}
+.close:hover {
+  cursor: pointer;
+}
+
+.save-modal-content {
+  margin: 20vh auto;
+  width: 30%;
+  text-align: center;
+}
+.save-modal-content p {
+  margin-bottom: 10px;
+  font-size: 1.4vw;
+}
