--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -375,7 +375,8 @@ input[type="checkbox"]:checked + label:before {
 
 /* View Navbar CSS */
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   padding: 0.5vw;
   border: none;
   font-size: 1.3vw;
@@ -1074,4 +1075,27 @@ textarea {
   font-size: 1.3vw;
   padding: 0.5vw;
   width: 16vw;
+}
+
+/* create account modal */
+.create-account-content {
+  margin: 30vh auto;
+  width: 40%;
+}
+.createblockbtn {
+  text-align: center;
+}
+
+.createblock label {
+  display: inline-block;
+  width: 13vw;
+  text-align: right;
+  font-size: 1.3vw;
+  padding-right: 1vw;
+}
+.createblock input {
+  width: 20vw;
+}
+.createblock {
+  padding-bottom: 1vw;
 }
